Add Bearer token authentication to API requests

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 # API Base URL for transcription and proofreading endpoints
 # Leave empty to use the default production API
 VITE_API_BASE_URL=https://transcription-api-omega.vercel.app
+
+# API Key for authentication (Bearer token)
+# Get this from the Transcription API service
+VITE_API_KEY=your-api-key-here
